--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-04-10 10:33+0200\n"
+"POT-Creation-Date: 2025-04-11 08:49+0200\n"
 "PO-Revision-Date: 2022-03-15 10:50+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: French\n"
@@ -286,11 +286,14 @@ msgstr "Titre"
 msgid "General availability"
 msgstr "Disponibilité générale"
 
-msgid "Rule"
-msgstr "Règle"
+msgid "Period"
+msgstr "Période"
 
 msgid "Extend"
 msgstr "Prolonger"
+
+msgid "Don't extend this availability period automatically"
+msgstr "Ne pas prolonger cette période de disponibilité automatiquement"
 
 msgid "Extend by one day at midnight"
 msgstr "Prolonger d'un jour à minuit"
@@ -358,14 +361,14 @@ msgstr "Chacun finissant à"
 msgid "May be partially reserved"
 msgstr "Peut être partiellement réservé"
 
-msgid "Options"
-msgstr "Options"
-
 msgid "Reservations per time slot"
 msgstr "Maximum des reservation par unité des temps"
 
 msgid "Available items"
 msgstr "Articles disponibles"
+
+msgid "Options"
+msgstr "Options"
 
 msgid "Reservations per time slot and person"
 msgstr "Réservations par tranche horaire et par personne"
@@ -2763,8 +2766,11 @@ msgstr "Occupation"
 msgid "Subscribe"
 msgstr "Souscrire"
 
-msgid "Rules"
-msgstr "Règles"
+msgid "Availability periods"
+msgstr "Périodes de disponibilité"
+
+msgid "Availability period"
+msgstr "Période de disponibilité"
 
 msgid "Edit allocation"
 msgstr "Modifier l'allocation"
@@ -3273,8 +3279,8 @@ msgstr "Refuser ${title} est irréversible."
 msgid "Reject reservation"
 msgstr "Refuser la réservation"
 
-#.
 #. Used in sentence: "${event} published."
+#.
 msgid "Event"
 msgstr "Événement"
 
@@ -3491,8 +3497,8 @@ msgstr ""
 msgid "Summary"
 msgstr "Sommaire"
 
-msgid "No rules defined."
-msgstr "Aucune règle définie."
+msgid "No availability periods defined."
+msgstr "Aucune période de disponibilité définie."
 
 msgid ""
 "Api keys can be used to ensure you're not being rate limited. They are not "
@@ -3652,8 +3658,8 @@ msgid ""
 "filled-out form."
 msgstr ""
 "Veuillez vérifier vos données et appuyez sur « Compléter » pour finaliser le "
-"processus. S'il y a quelque chose que vous souhaitez modifier, cliquez sur "
-"« Modifier » pour retourner sur le formulaire complété."
+"processus. S'il y a quelque chose que vous souhaitez modifier, cliquez sur « "
+"Modifier » pour retourner sur le formulaire complété."
 
 msgid ""
 "The image shown in the list view is a square. To have your image shown fully "
@@ -4872,15 +4878,23 @@ msgid "Reservations must be made at least ${n} hours in advance."
 msgstr ""
 "Les réservations doivent être effectuées au moins ${n} heures à l'avance."
 
-msgid "Select a free time span in the calendar below to create an allocation."
+msgid ""
+"Select a free time span in the calendar to create an availability period."
 msgstr ""
-"Sélectionnez un intervalle de temps libre dans le calendrier ci-dessous pour "
-"créer une allocation."
+"Sélectionnez une période libre dans le calendrier pour créer une période de "
+"disponibilité."
 
-msgid "Removes all unreserved allocations between the start and end date."
+msgid ""
+"Removes all unreserved allocations between the start and end date. This "
+"includes allocations that were created by using an availability period. To "
+"recreate these allocations, click on \"edit\" in the availability period and "
+"then \"save\" without changing anything."
 msgstr ""
-"Supprime toutes les allocation non réservées entre la date de début et de "
-"fin."
+"Supprime toutes les allocations non réservées entre la date de début et la "
+"date de fin. Cela inclut les allocations qui ont été créées en utilisant une "
+"période de disponibilité. Pour recréer ces allocations, cliquez sur "
+"\"éditer\" dans la période de disponibilité, puis \"enregistrer\" sans rien "
+"changer."
 
 msgid "Reservation is pending approval"
 msgstr "La réservation est en attente d'approbation"
@@ -5240,70 +5254,75 @@ msgstr "Arrêter"
 msgid "Do you really want to stop \"${title}\"?"
 msgstr "Voulez-vous vraiment arrêter \"${title}\" ?"
 
-msgid "The rule will be removed without affecting existing allocations."
-msgstr "La règle sera supprimée sans affecter les allocations existantes."
+msgid ""
+"The availability period will be removed without affecting existing "
+"allocations."
+msgstr ""
+"Le délai de disponibilité sera supprimé sans affecter les allocations "
+"existantes."
 
-msgid "Stop rule"
-msgstr "Arrêter la règle"
+msgid "Stop availability period"
+msgstr "Arrêter la période de disponibilité"
 
 msgid ""
-"All allocations created by the rule will be removed, if they haven't been "
-"reserved yet."
+"All allocations created by the availability period will be removed, if they "
+"haven't been reserved yet."
 msgstr ""
-"Toutes les allocations créées par la règle seront supprimées si elles n'ont "
-"pas encore été réservées."
+"Les allocations créées par la période de disponibilité seront supprimées, si "
+"elles n'ont pas encore été réservées."
 
-msgid "Delete rule"
-msgstr "Supprimer la règle"
-
-msgid "No allocations to add"
-msgstr "Aucune allocation à ajouter"
-
-#, python-format
-msgid "Successfully added ${n} allocations"
-msgstr "${n} dotations ajoutées avec succès"
-
-msgid "New allocation"
-msgstr "Nouvelle allocation"
+msgid "Delete availability period"
+msgstr "Supprimer la période de disponibilité"
 
 msgid "Your changes were saved"
 msgstr "Vos modifications ont été enregistrées"
 
 #, python-format
-msgid "New rule active, ${n} allocations created"
-msgstr "Nouvelle règle active, ${n} allocations créées"
+msgid "New availability period active, ${n} allocations created"
+msgstr "Nouvelle période de disponibilité active, ${n} allocations créées"
 
-msgid "New Rule"
-msgstr "Nouvelle règle"
+msgid "New availabilty period"
+msgstr "Nouvelle période de disponibilité"
 
 msgid ""
-"Rules ensure that the allocations between start/end exist and that they are "
-"extended beyond those dates at the given intervals. "
+"Availability periods ensure that the allocations between start/end exist and "
+"that they are extended beyond those dates at the given intervals."
 msgstr ""
-"Les règles garantissent que les allocations entre le début et la fin "
-"existent et qu'elles sont prolongées au-delà de ces dates à des intervalles "
-"donnés."
+"Les périodes de disponibilité garantissent que les allocations entre le "
+"début et la fin existent et qu'elles sont prolongées au-delà de ces dates "
 
 #, python-format
 msgid ""
-"Rule updated. ${deleted} allocations removed, ${created} new allocations "
-"created."
+"Availability period updated. ${deleted} allocations removed, ${created} new "
+"allocations created."
 msgstr ""
-"La règle a été mise à jour. ${deleted} allocations supprimées, ${created} "
+"Disponibilité mise à jour. ${deleted} allocations supprimées, ${created} "
 "nouvelles allocations créées."
 
-msgid "Rule not found"
-msgstr "Règle non trouvée"
+msgid "Availability period not found"
+msgstr "Période de disponibilité introuvable"
 
-msgid "Edit Rule"
-msgstr "Modifier la règle"
+msgid "Edit availabilty period"
+msgstr "Modifier la période de disponibilité"
 
-msgid "The rule was stopped"
-msgstr "La règle a été arrêtée"
+msgid ""
+"Availability periods create availabilities between the specified start and "
+"end date. The availability period should ideally last until the next time "
+"the availabilities are expected to change. For example, a school term or a "
+"school year."
+msgstr ""
+"Les périodes de disponibilité créent des disponibilités entre la date de "
+"début et la date de fin spécifiées. La période de disponibilité doit "
+"normalement durer jusqu'à la prochaine fois que les disponibilités sont "
+"censées changer. Par exemple, un trimestre scolaire ou une année scolaire."
+
+msgid "The availability period was stopped"
+msgstr "La période de disponibilité a été arrêtée"
 
 #, python-format
-msgid "The rule was deleted, along with ${n} allocations"
-msgstr "La règle a été supprimée, avec les allocations ${n}"
+msgid "The availability period was deleted, along with ${n} allocations"
+msgstr ""
+"La période de disponibilité a été supprimée, ainsi que ${n} allocations"
 
 msgid "Topics A-Z"
 msgstr "Sujets de A à Z"
@@ -6711,3 +6730,85 @@ msgstr "Un compte a été créé pour vous"
 
 msgid "The user was created successfully"
 msgstr "L'utilisateur a bien été créé"
+
+#~ msgid ""
+#~ "Select a free time span in the calendar below to create an allocation."
+#~ msgstr ""
+#~ "Sélectionnez un intervalle de temps libre dans le calendrier ci-dessous "
+#~ "pour créer une allocation."
+
+#~ msgid "Rule"
+#~ msgstr "Règle"
+
+#~ msgid "No rules defined."
+#~ msgstr "Aucune règle définie."
+
+#~ msgid "Rule not found"
+#~ msgstr "Règle non trouvée"
+
+#~ msgid "The rule was stopped"
+#~ msgstr "La règle a été arrêtée"
+
+#~ msgid "Rules"
+#~ msgstr "Règles"
+
+#~ msgid "Removes all unreserved allocations between the start and end date."
+#~ msgstr ""
+#~ "Supprime toutes les allocation non réservées entre la date de début et de "
+#~ "fin."
+
+#~ msgid "Delete rule"
+#~ msgstr "Supprimer la règle"
+
+#~ msgid "No allocations to add"
+#~ msgstr "Aucune allocation à ajouter"
+
+#, python-format
+#~ msgid "Successfully added ${n} allocations"
+#~ msgstr "${n} dotations ajoutées avec succès"
+
+#~ msgid "New allocation"
+#~ msgstr "Nouvelle allocation"
+
+#, python-format
+#~ msgid "New rule active, ${n} allocations created"
+#~ msgstr "Nouvelle règle active, ${n} allocations créées"
+
+#~ msgid "New Rule"
+#~ msgstr "Nouvelle règle"
+
+#~ msgid ""
+#~ "Rules ensure that the allocations between start/end exist and that they "
+#~ "are extended beyond those dates at the given intervals. "
+#~ msgstr ""
+#~ "Les règles garantissent que les allocations entre le début et la fin "
+#~ "existent et qu'elles sont prolongées au-delà de ces dates à des "
+#~ "intervalles donnés."
+
+#, python-format
+#~ msgid ""
+#~ "Rule updated. ${deleted} allocations removed, ${created} new allocations "
+#~ "created."
+#~ msgstr ""
+#~ "La règle a été mise à jour. ${deleted} allocations supprimées, ${created} "
+#~ "nouvelles allocations créées."
+
+#~ msgid "Edit Rule"
+#~ msgstr "Modifier la règle"
+
+#, python-format
+#~ msgid "The rule was deleted, along with ${n} allocations"
+#~ msgstr "La règle a été supprimée, avec les allocations ${n}"
+
+#~ msgid "The rule will be removed without affecting existing allocations."
+#~ msgstr "La règle sera supprimée sans affecter les allocations existantes."
+
+#~ msgid "Stop rule"
+#~ msgstr "Arrêter la règle"
+
+#~ msgid ""
+#~ "All allocations created by the rule will be removed, if they haven't been "
+#~ "reserved yet."
+#~ msgstr ""
+#~ "Toutes les allocations créées par la règle seront supprimées si elles "
+#~ "n'ont pas encore été réservées."
