--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2025-04-10 10:33+0200\n"
+"POT-Creation-Date: 2025-04-11 08:49+0200\n"
 "PO-Revision-Date: 2022-03-15 10:52+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -287,11 +287,14 @@ msgstr "Titolo"
 msgid "General availability"
 msgstr "Disponibilità generale"
 
-msgid "Rule"
-msgstr "Regola"
+msgid "Period"
+msgstr "Periodo"
 
 msgid "Extend"
 msgstr "Prolunga"
+
+msgid "Don't extend this availability period automatically"
+msgstr "Non prolungare questo periodo di disponibilità automaticamente"
 
 msgid "Extend by one day at midnight"
 msgstr "Prolunga di un giorno a mezzanotte"
@@ -359,14 +362,14 @@ msgstr "Ognuno fino alle"
 msgid "May be partially reserved"
 msgstr "Può essere parzialmente prenotato"
 
-msgid "Options"
-msgstr "Opzioni"
-
 msgid "Reservations per time slot"
 msgstr "Prenotazioni per fascia oraria"
 
 msgid "Available items"
 msgstr "Elementi disponibili"
+
+msgid "Options"
+msgstr "Opzioni"
 
 msgid "Reservations per time slot and person"
 msgstr "Prenotazioni per fascia oraria e persona"
@@ -2765,8 +2768,11 @@ msgstr "Occupazione"
 msgid "Subscribe"
 msgstr "Iscriviti"
 
-msgid "Rules"
-msgstr "Regole"
+msgid "Availability periods"
+msgstr "Periodi di disponibilità"
+
+msgid "Availability period"
+msgstr "Periodo di disponibilità"
 
 msgid "Edit allocation"
 msgstr "Modifica allocazione"
@@ -3276,8 +3282,8 @@ msgstr "Il rifiuto di ${title} non può essere annullato."
 msgid "Reject reservation"
 msgstr "Rifiuta prenotazione"
 
-#.
 #. Used in sentence: "${event} published."
+#.
 msgid "Event"
 msgstr "Evento"
 
@@ -3491,8 +3497,8 @@ msgstr ""
 msgid "Summary"
 msgstr "Riepilogo"
 
-msgid "No rules defined."
-msgstr "Nessuna regola definita."
+msgid "No availability periods defined."
+msgstr "Nessun periodo di disponibilità definito."
 
 msgid ""
 "Api keys can be used to ensure you're not being rate limited. They are not "
@@ -4856,14 +4862,22 @@ msgid "Reservations must be made at least ${n} hours in advance."
 msgstr ""
 "Le prenotazioni devono essere effettuate con almeno ${n} ore di anticipo."
 
-msgid "Select a free time span in the calendar below to create an allocation."
+msgid ""
+"Select a free time span in the calendar to create an availability period."
 msgstr ""
-"Seleziona un periodo di tempo libero nel calendario sottostante per creare "
-"un'allocazione."
+"Seleziona un intervallo di tempo libero nel calendario per creare un "
+"periodo di disponibilità."
 
-msgid "Removes all unreserved allocations between the start and end date."
+msgid ""
+"Removes all unreserved allocations between the start and end date. This "
+"includes allocations that were created by using an availability period. To "
+"recreate these allocations, click on \"edit\" in the availability period and "
+"then \"save\" without changing anything."
 msgstr ""
-"Rimuove tutte le allocazioni non riservate tra la data di inizio e di fine."
+"Rimuove tutte le allocazioni non riservate tra la data di inizio e quella di "
+"fine. Ciò include le allocazioni create utilizzando un periodo di "
+"disponibilità. Per ricreare queste allocazioni, fare clic su \"modifica\" "
+"nel periodo di disponibilità e quindi \"salva\" senza modificare nulla."
 
 msgid "Reservation is pending approval"
 msgstr "La prenotazione è in attesa di approvazione"
@@ -5228,69 +5242,74 @@ msgstr "Arresta"
 msgid "Do you really want to stop \"${title}\"?"
 msgstr "Vuoi davvero fermare \"${title}\"?"
 
-msgid "The rule will be removed without affecting existing allocations."
-msgstr "La regola sarà rimossa senza influire sulle allocazioni esistenti."
+msgid ""
+"The availability period will be removed without affecting existing "
+"allocations."
+msgstr ""
+"Il periodo di disponibilità verrà rimosso senza influire sulle allocazioni "
+"esistenti."
 
-msgid "Stop rule"
-msgstr "Arresta la regola"
+msgid "Stop availability period"
+msgstr "Arresta il periodo di disponibilità"
 
 msgid ""
-"All allocations created by the rule will be removed, if they haven't been "
-"reserved yet."
+"All allocations created by the availability period will be removed, if they "
+"haven't been reserved yet."
 msgstr ""
-"Se non sono state ancora prenotate, tutte le allocazioni create dalla regola "
-"verranno rimosse."
+"Tutte le allocazioni create dal periodo di disponibilità verranno rimosse, "
+"se non sono state ancora prenotate."
 
-msgid "Delete rule"
-msgstr "Elimina la regola"
-
-msgid "No allocations to add"
-msgstr "Nessuna allocazione da aggiungere"
-
-#, python-format
-msgid "Successfully added ${n} allocations"
-msgstr "${n} allocazioni aggiunte correttamente"
-
-msgid "New allocation"
-msgstr "Nuova allocazione"
+msgid "Delete availability period"
+msgstr "Elimina il periodo di disponibilità"
 
 msgid "Your changes were saved"
 msgstr "Le modifiche sono state salvate"
 
 #, python-format
-msgid "New rule active, ${n} allocations created"
-msgstr "Nuova regola attiva, ${n} allocazioni create"
+msgid "New availability period active, ${n} allocations created"
+msgstr "Nuovo periodo di disponibilità attivo, ${n} allocazioni create"
 
-msgid "New Rule"
-msgstr "Nuova regola"
+msgid "New availabilty period"
+msgstr "Nuovo periodo di disponibilità"
 
 msgid ""
-"Rules ensure that the allocations between start/end exist and that they are "
-"extended beyond those dates at the given intervals. "
+"Availability periods ensure that the allocations between start/end exist and "
+"that they are extended beyond those dates at the given intervals."
 msgstr ""
-"Le regole assicurano che le allocazioni tra inizio/fine esistano e che siano "
-"estese oltre tali date agli intervalli indicati. "
+"Le disponibilità garantiscono che le allocazioni tra inizio/fine esistano e "
+"che vengano estese oltre queste date a intervalli prestabiliti."
 
 #, python-format
 msgid ""
-"Rule updated. ${deleted} allocations removed, ${created} new allocations "
-"created."
+"Availability period updated. ${deleted} allocations removed, ${created} new "
+"allocations created."
 msgstr ""
-"La regola è stata aggiornata. ${deleted} allocazioni rimosse, ${created} "
-"nuove allocazioni create."
+"Periodo di disponibilità aggiornato. ${deleted} allocazioni rimosse, "
+"${created} nuove allocazioni create."
 
-msgid "Rule not found"
-msgstr "Regola non trovata"
+msgid "Availability period not found"
+msgstr "Periodo di disponibilità non trovato"
 
-msgid "Edit Rule"
-msgstr "Modifica regola"
+msgid "Edit availabilty period"
+msgstr "Modifica il periodo di disponibilità"
 
-msgid "The rule was stopped"
-msgstr "La regola è stata arrestata"
+msgid ""
+"Availability periods create availabilities between the specified start and "
+"end date. The availability period should ideally last until the next time "
+"the availabilities are expected to change. For example, a school term or a "
+"school year."
+msgstr ""
+"Le disponibilità creano disponibilità tra la data di inizio e quella di fine "
+"specificate. Il periodo di disponibilità dovrebbe idealmente durare fino al "
+"prossimo cambiamento delle disponibilità. Ad esempio, un semestre scolastico "
+"o un anno scolastico."
+
+msgid "The availability period was stopped"
+msgstr "Il periodo di disponibilità è stato fermato"
 
 #, python-format
-msgid "The rule was deleted, along with ${n} allocations"
-msgstr "La regola è stata eliminata, insieme ${n} allocazioni"
+msgid "The availability period was deleted, along with ${n} allocations"
+msgstr "La disponibilità è stata eliminata, insieme a ${n} allocazioni"
 
 msgid "Topics A-Z"
 msgstr "Argomenti A-Z"
@@ -6693,3 +6712,84 @@ msgstr "È stato creato un account per te"
 
 msgid "The user was created successfully"
 msgstr "Utente creato correttamente"
+
+#~ msgid ""
+#~ "Select a free time span in the calendar below to create an allocation."
+#~ msgstr ""
+#~ "Seleziona un periodo di tempo libero nel calendario sottostante per "
+#~ "creare un'allocazione."
+
+#~ msgid "Rule"
+#~ msgstr "Regola"
+
+#~ msgid "No rules defined."
+#~ msgstr "Nessuna regola definita."
+
+#~ msgid "Rule not found"
+#~ msgstr "Regola non trovata"
+
+#~ msgid "The rule was stopped"
+#~ msgstr "La regola è stata arrestata"
+
+#~ msgid "Rules"
+#~ msgstr "Regole"
+
+#~ msgid "Removes all unreserved allocations between the start and end date."
+#~ msgstr ""
+#~ "Rimuove tutte le allocazioni non riservate tra la data di inizio e di "
+#~ "fine."
+
+#~ msgid "Delete rule"
+#~ msgstr "Elimina la regola"
+
+#~ msgid "No allocations to add"
+#~ msgstr "Nessuna allocazione da aggiungere"
+
+#, python-format
+#~ msgid "Successfully added ${n} allocations"
+#~ msgstr "${n} allocazioni aggiunte correttamente"
+
+#~ msgid "New allocation"
+#~ msgstr "Nuova allocazione"
+
+#, python-format
+#~ msgid "New rule active, ${n} allocations created"
+#~ msgstr "Nuova regola attiva, ${n} allocazioni create"
+
+#~ msgid "New Rule"
+#~ msgstr "Nuova regola"
+
+#~ msgid ""
+#~ "Rules ensure that the allocations between start/end exist and that they "
+#~ "are extended beyond those dates at the given intervals. "
+#~ msgstr ""
+#~ "Le regole assicurano che le allocazioni tra inizio/fine esistano e che "
+#~ "siano estese oltre tali date agli intervalli indicati. "
+
+#, python-format
+#~ msgid ""
+#~ "Rule updated. ${deleted} allocations removed, ${created} new allocations "
+#~ "created."
+#~ msgstr ""
+#~ "La regola è stata aggiornata. ${deleted} allocazioni rimosse, ${created} "
+#~ "nuove allocazioni create."
+
+#~ msgid "Edit Rule"
+#~ msgstr "Modifica regola"
+
+#, python-format
+#~ msgid "The rule was deleted, along with ${n} allocations"
+#~ msgstr "La regola è stata eliminata, insieme ${n} allocazioni"
+
+#~ msgid "The rule will be removed without affecting existing allocations."
+#~ msgstr "La regola sarà rimossa senza influire sulle allocazioni esistenti."
+
+#~ msgid "Stop rule"
+#~ msgstr "Arresta la regola"
+
+#~ msgid ""
+#~ "All allocations created by the rule will be removed, if they haven't been "
+#~ "reserved yet."
+#~ msgstr ""
+#~ "Se non sono state ancora prenotate, tutte le allocazioni create dalla "
+#~ "regola verranno rimosse."
