--- a/src/onegov/feriennet/locale/de_CH/LC_MESSAGES/onegov.feriennet.po
+++ b/src/onegov/feriennet/locale/de_CH/LC_MESSAGES/onegov.feriennet.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-04-09 20:43+0200\n"
+"POT-Creation-Date: 2025-04-15 19:31+0200\n"
 "PO-Revision-Date: 2021-11-11 09:08+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -2226,6 +2226,9 @@ msgstr "Eine Übersicht Ihrer aktuellen Buchungen finden Sie hier:"
 msgid "Best regards"
 msgstr "Freundliche Grüsse"
 
+msgid "Cancellation conditions:"
+msgstr "Stornierungsbedingungen:"
+
 msgid "We have received your deregistration for ${name}."
 msgstr "Wir haben Ihre Abmeldung für ${name} erhalten."
 
@@ -3120,6 +3123,19 @@ msgstr "SwissPass ID der Teilnehmenden verlangen"
 
 msgid "SwissPass ID"
 msgstr "SwissPass ID"
+
+msgid "Cancellation condition text"
+msgstr "Stornierungsbedingungen text"
+
+msgid "Cancellation conditions"
+msgstr "Stornierungsbedingungen"
+
+msgid ""
+"The text will be shown below the confirmation text for an activity in the "
+"mail"
+msgstr ""
+"Der Text wird unter dem Bestätigungstext für ein Angebot in der E-Mail "
+"angezeigt"
 
 msgid "Parents can see the contacts of other parents in the same activity"
 msgstr ""
