Updates translations. Fixes JS conflict.

--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-04-11 08:49+0200\n"
+"POT-Creation-Date: 2025-04-17 10:00+0200\n"
 "PO-Revision-Date: 2022-03-15 10:21+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -1326,6 +1326,9 @@ msgstr "Notizen"
 msgid "Public extra information about this person"
 msgstr "Öffentliche Extra Informationen zu dieser Person"
 
+msgid "Tag"
+msgstr "Schlagwort"
+
 msgid "I am looking to make a reservation lasting"
 msgstr "Ich suche einen Termin für"
 
@@ -2012,6 +2015,43 @@ msgstr "Email-Benachrichtigungen für alle Tickets deaktivieren"
 msgid "Always send email notification if a new ticket message is sent"
 msgstr "Email-Benachrichtigung immer senden bei neuen Ticket-Nachrichten"
 
+msgid ""
+"Each tag can be associated with arbitrary key value pairs which will be "
+"displayed in the ticket alongside the submitted form values. If a key "
+"exactly matches the name of a form field that field's value will be pre-"
+"populated according to the value.\n"
+"\n"
+"Example:\n"
+"```yaml\n"
+"- High Priority\n"
+"- Medium Priority\n"
+"- Low Priority\n"
+"- FC Govikon:\n"
+"    E-Mail: fc@govikon.ch\n"
+"    Postal Code / City: 1234 Govikon\n"
+"- HC Govikon:\n"
+"    E-Mail: hc@govikon.ch\n"
+"    Postal Code / City: 1234 Govikon\n"
+"```"
+msgstr ""
+"Jedes Schlagwort kann mit beliebigen Schlüsselwertepaaren verknüpft werden, "
+"die dann im Ticket zusammen mit den übermittelten Formularwerten angezeigt "
+"werden. Wenn ein Schlüssel genau mit dem Namen eines Formularfeldes "
+"übereinstimmt, wird der Wert dieses Feldes entsprechend vorausgefüllt.\n"
+"\n"
+"Beispiel:\n"
+"```yaml\n"
+"- Hohe Priorität\n"
+"- Mittler Priorität\n"
+"- Tiefe Priorität\n"
+"- FC Govikon:\n"
+"    E-Mail: fc@govikon.ch\n"
+"    PLZ / Ort: 1234 Govikon\n"
+"- HC Govikon:\n"
+"    E-Mail: hc@govikon.ch\n"
+"    PLZ / Ort: 1234 Govikon\n"
+"```"
+
 msgid "Categories restricted by user group settings"
 msgstr "Durch Benutzergruppeneinstellungen eingeschränkte Kategorien"
 
@@ -2019,6 +2059,13 @@ msgid "Mute tickets individually if the auto-accept feature is enabled."
 msgstr ""
 "Schalten Sie Tickets individuell auf stumm, wenn sie Tickets automatisch "
 "akzeptieren."
+
+msgid ""
+"Invalid format. Please define tags and their meta data according to the "
+"example."
+msgstr ""
+"Ungültiges Format. Bitte definieren Sie die Schlagworte und Metadaten "
+"entsprechend dem gegebenen Beispiel."
 
 msgid "Enable newsletter"
 msgstr "Newsletter aktivieren"
@@ -2656,6 +2703,9 @@ msgstr ""
 msgid "Close ticket"
 msgstr "Ticket abschliessen"
 
+msgid "Change tag"
+msgstr "Schlagwort ändern"
+
 msgid "Reopen ticket"
 msgstr "Ticket wieder öffnen"
 
@@ -3270,8 +3320,8 @@ msgstr "Die Absage von ${title} kann nicht rückgängig gemacht werden."
 msgid "Reject reservation"
 msgstr "Reservation absagen"
 
-#. Used in sentence: "${event} published."
 #.
+#. Used in sentence: "${event} published."
 msgid "Event"
 msgstr "Veranstaltung"
 
@@ -4726,9 +4776,6 @@ msgstr "Dies ist eine importierte Veranstaltung"
 
 msgid "Search in Events"
 msgstr "Suche in Veranstaltungen"
-
-msgid "Tag"
-msgstr "Schlagwort"
 
 msgid "Export these events"
 msgstr "Diese Termine exportieren"
@@ -6615,6 +6662,9 @@ msgstr ""
 #, python-format
 msgid "You recovered ticket ${number} from the archive"
 msgstr "Sie haben Ticket ${number} aus dem Archiv geholt"
+
+msgid "Tag changed"
+msgstr "Schlagwort geändert"
 
 msgid "The ticket has already been closed"
 msgstr "Das Ticket wurde bereits geschlossen"
