--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2025-04-11 08:49+0200\n"
+"POT-Creation-Date: 2025-04-17 10:00+0200\n"
 "PO-Revision-Date: 2022-03-15 10:52+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1329,6 +1329,9 @@ msgstr "Note"
 msgid "Public extra information about this person"
 msgstr "Informazioni pubbliche aggiuntive su questa persona"
 
+msgid "Tag"
+msgstr "Tag"
+
 msgid "I am looking to make a reservation lasting"
 msgstr "Voglio fare una prenotazione di"
 
@@ -2024,6 +2027,43 @@ msgstr ""
 "Invia sempre una notifica tramite e-mail se viene inviato un nuovo messaggio "
 "per il biglietto"
 
+msgid ""
+"Each tag can be associated with arbitrary key value pairs which will be "
+"displayed in the ticket alongside the submitted form values. If a key "
+"exactly matches the name of a form field that field's value will be pre-"
+"populated according to the value.\n"
+"\n"
+"Example:\n"
+"```yaml\n"
+"- High Priority\n"
+"- Medium Priority\n"
+"- Low Priority\n"
+"- FC Govikon:\n"
+"    E-Mail: fc@govikon.ch\n"
+"    Postal Code / City: 1234 Govikon\n"
+"- HC Govikon:\n"
+"    E-Mail: hc@govikon.ch\n"
+"    Postal Code / City: 1234 Govikon\n"
+"```"
+msgstr ""
+"Ogni tag può essere associato a coppie arbitrarie di valori-chiave che "
+"saranno visualizzate nel ticket insieme ai valori del modulo inviato. Se una "
+"chiave corrisponde esattamente al nome di un campo del modulo, il valore del "
+"campo verrà pre-popolato in base al valore.\n"
+"\n"
+"Esempio:\n"
+"```yaml\n"
+"- Alta priorità\n"
+"- Media priorità\n"
+"- Bassa priorità\n"
+"- FC Govikon:\n"
+"    E-Mail: fc@govikon.ch\n"
+"    Codice postale / Città: 1234 Govikon\n"
+"- HC Govikon:\n"
+"    E-Mail: hc@govikon.ch\n"
+"    Codice postale / Città: 1234 Govikon\n"
+"```"
+
 msgid "Categories restricted by user group settings"
 msgstr "Categorie limitate dalle impostazioni del gruppo di utenti"
 
@@ -2031,6 +2071,12 @@ msgid "Mute tickets individually if the auto-accept feature is enabled."
 msgstr ""
 "Disattiva i biglietti singolarmente se la funzione di accettazione "
 "automatica è abilitata."
+
+msgid ""
+"Invalid format. Please define tags and their meta data according to the "
+"example."
+msgstr ""
+"Formato non valido. Definire i tag e i loro meta-dati secondo l'esempio."
 
 msgid "Enable newsletter"
 msgstr "Attiva la newsletter"
@@ -2084,10 +2130,10 @@ msgid ""
 "will receive it, independent of their selected categories if there are any."
 msgstr ""
 "Creare automaticamente una newsletter giornaliera contenente tutte le nuove "
-"notizie dall'ultima ora di invio. Invierà una newsletter solo se c'è "
-"almeno un nuovo articolo di notizie. Solo gli abbonati che si sono "
-"registrati alla newsletter giornaliera la riceveranno, indipendentemente "
-"dalle categorie selezionate, se presenti."
+"notizie dall'ultima ora di invio. Invierà una newsletter solo se c'è almeno "
+"un nuovo articolo di notizie. Solo gli abbonati che si sono registrati alla "
+"newsletter giornaliera la riceveranno, indipendentemente dalle categorie "
+"selezionate, se presenti."
 
 msgid "Automatic newsletters"
 msgstr "Newsletter automatiche"
@@ -2119,8 +2165,8 @@ msgstr "Si prega di specificare almeno un orario."
 
 msgid "Invalid time format. Please use a value between 0 and 24."
 msgstr ""
-"Formato orario non valido. Si prega di utilizzare un valore compreso tra 0 "
-"e 24."
+"Formato orario non valido. Si prega di utilizzare un valore compreso tra 0 e "
+"24."
 
 msgid "Invalid time format. Please use 24h format."
 msgstr "Formato orario non valido. Si prega di utilizzare il formato 24 ore."
@@ -2667,6 +2713,9 @@ msgstr ""
 
 msgid "Close ticket"
 msgstr "Chiudi il biglietto"
+
+msgid "Change tag"
+msgstr "Modificare il tag"
 
 msgid "Reopen ticket"
 msgstr "Riapri il biglietto"
@@ -3282,8 +3331,8 @@ msgstr "Il rifiuto di ${title} non può essere annullato."
 msgid "Reject reservation"
 msgstr "Rifiuta prenotazione"
 
-#. Used in sentence: "${event} published."
 #.
+#. Used in sentence: "${event} published."
 msgid "Event"
 msgstr "Evento"
 
@@ -4725,9 +4774,6 @@ msgstr "Questo è un evento importato"
 msgid "Search in Events"
 msgstr "Ricerca negli eventi"
 
-msgid "Tag"
-msgstr "Tag"
-
 msgid "Export these events"
 msgstr "Esporta questi eventi"
 
@@ -4865,8 +4911,8 @@ msgstr ""
 msgid ""
 "Select a free time span in the calendar to create an availability period."
 msgstr ""
-"Seleziona un intervallo di tempo libero nel calendario per creare un "
-"periodo di disponibilità."
+"Seleziona un intervallo di tempo libero nel calendario per creare un periodo "
+"di disponibilità."
 
 msgid ""
 "Removes all unreserved allocations between the start and end date. This "
@@ -6616,6 +6662,9 @@ msgstr ""
 #, python-format
 msgid "You recovered ticket ${number} from the archive"
 msgstr "Hai recuperato il biglietto ${number} dall'archivio"
+
+msgid "Tag changed"
+msgstr "Tag modificato"
 
 msgid "The ticket has already been closed"
 msgstr "Il biglietto è già stato chiuso"
