--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-04-11 08:49+0200\n"
+"POT-Creation-Date: 2025-04-17 10:00+0200\n"
 "PO-Revision-Date: 2022-03-15 10:50+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: French\n"
@@ -1325,6 +1325,9 @@ msgstr "Notes"
 msgid "Public extra information about this person"
 msgstr "Informations publiques supplémentaires à propos de cette semaine"
 
+msgid "Tag"
+msgstr "Étiquette"
+
 msgid "I am looking to make a reservation lasting"
 msgstr "Je cherche à faire une réservation d'une durée de"
 
@@ -2019,6 +2022,43 @@ msgstr ""
 "Toujours envoyer une notification par courriel pour les nouveaux messages de "
 "ticket"
 
+msgid ""
+"Each tag can be associated with arbitrary key value pairs which will be "
+"displayed in the ticket alongside the submitted form values. If a key "
+"exactly matches the name of a form field that field's value will be pre-"
+"populated according to the value.\n"
+"\n"
+"Example:\n"
+"```yaml\n"
+"- High Priority\n"
+"- Medium Priority\n"
+"- Low Priority\n"
+"- FC Govikon:\n"
+"    E-Mail: fc@govikon.ch\n"
+"    Postal Code / City: 1234 Govikon\n"
+"- HC Govikon:\n"
+"    E-Mail: hc@govikon.ch\n"
+"    Postal Code / City: 1234 Govikon\n"
+"```"
+msgstr ""
+"Chaque étiquette peut être associée à des paires clé/valeur arbitraires qui "
+"seront affichées dans le ticket avec les valeurs du formulaire soumis. Si "
+"une clé correspond exactement au nom d'un champ de formulaire, la valeur de "
+"ce champ sera pré-remplie en fonction de la valeur.\n"
+"\n"
+"Exemple:\n"
+"```yaml\n"
+"- Haute priorité\n"
+"- Moyenne priorité\n"
+"- Faible priorité\n"
+"- FC Govikon:\n"
+"    E-Mail: fc@govikon.ch\n"
+"    Code postal / Lieu: 1234 Govikon\n"
+"- HC Govikon:\n"
+"    E-Mail: hc@govikon.ch\n"
+"    Code postal / Lieu: 1234 Govikon\n"
+"```"
+
 msgid "Categories restricted by user group settings"
 msgstr "Catégories restreintes par les paramètres du groupe d'utilisateurs"
 
@@ -2026,6 +2066,13 @@ msgid "Mute tickets individually if the auto-accept feature is enabled."
 msgstr ""
 "Mettez les tickets en sourdine individuellement si la fonction d'acceptation "
 "automatique est activée."
+
+msgid ""
+"Invalid format. Please define tags and their meta data according to the "
+"example."
+msgstr ""
+"Format non valide. Veuillez définir les balises et leurs métadonnées "
+"conformément à l'exemple."
 
 msgid "Enable newsletter"
 msgstr "Activer la newsletter"
@@ -2079,8 +2126,8 @@ msgid ""
 "will receive it, independent of their selected categories if there are any."
 msgstr ""
 "Crée automatiquement une lettre d'information quotidienne contenant tous les "
-"nouveaux articles d'actualités depuis la dernière heure d'envoi. Il n'enverra "
-"une lettre d'information que s'il y a au moins un nouvel article "
+"nouveaux articles d'actualités depuis la dernière heure d'envoi. Il "
+"n'enverra une lettre d'information que s'il y a au moins un nouvel article "
 "d'actualités. Seuls les abonnés qui se sont inscrits à la lettre "
 "d'information quotidienne la recevront, indépendamment de leurs catégories "
 "sélectionnées, le cas échéant."
@@ -2114,8 +2161,7 @@ msgid "Please specify at least one time."
 msgstr "Veuillez spécifier au moins une heure."
 
 msgid "Invalid time format. Please use a value between 0 and 24."
-msgstr ""
-"Format d'heure non valide. Veuillez utiliser une valeur entre 0 et 24."
+msgstr "Format d'heure non valide. Veuillez utiliser une valeur entre 0 et 24."
 
 msgid "Invalid time format. Please use 24h format."
 msgstr "Format d'heure non valide. Veuillez utiliser le format 24h."
@@ -2665,6 +2711,9 @@ msgstr "Ce ticket nécessite une décision, mais aucune n'a encore été prise."
 
 msgid "Close ticket"
 msgstr "Fermer le ticket"
+
+msgid "Change tag"
+msgstr "Changer d'étiquette"
 
 msgid "Reopen ticket"
 msgstr "Ré-ouvrir le ticket"
@@ -3279,8 +3328,8 @@ msgstr "Refuser ${title} est irréversible."
 msgid "Reject reservation"
 msgstr "Refuser la réservation"
 
-#. Used in sentence: "${event} published."
 #.
+#. Used in sentence: "${event} published."
 msgid "Event"
 msgstr "Événement"
 
@@ -3658,8 +3707,8 @@ msgid ""
 "filled-out form."
 msgstr ""
 "Veuillez vérifier vos données et appuyez sur « Compléter » pour finaliser le "
-"processus. S'il y a quelque chose que vous souhaitez modifier, cliquez sur « "
-"Modifier » pour retourner sur le formulaire complété."
+"processus. S'il y a quelque chose que vous souhaitez modifier, cliquez sur "
+"« Modifier » pour retourner sur le formulaire complété."
 
 msgid ""
 "The image shown in the list view is a square. To have your image shown fully "
@@ -4740,9 +4789,6 @@ msgstr "Il s'agit d'un événement importé"
 
 msgid "Search in Events"
 msgstr "Rechercher dans les événements"
-
-msgid "Tag"
-msgstr "Étiquette"
 
 msgid "Export these events"
 msgstr "Exporter ces événements"
@@ -6634,6 +6680,9 @@ msgstr ""
 #, python-format
 msgid "You recovered ticket ${number} from the archive"
 msgstr "Vous avez récupéré le ticket avec le numéro ${number} de l'archive"
+
+msgid "Tag changed"
+msgstr "Étiquette changée"
 
 msgid "The ticket has already been closed"
 msgstr "Le ticket a déjà été fermé"
