--- a/src/onegov/landsgemeinde/locale/de_CH/LC_MESSAGES/onegov.landsgemeinde.po
+++ b/src/onegov/landsgemeinde/locale/de_CH/LC_MESSAGES/onegov.landsgemeinde.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2025-04-14 11:50+0200\n"
+"POT-Creation-Date: 2025-04-17 10:21+0200\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Language-Team: German\n"
 "Language: de_CH\n"
@@ -304,6 +304,12 @@ msgstr "laufend"
 
 msgid "completed"
 msgstr "abgeschlossen"
+
+msgid "Previous agenda item"
+msgstr "Vorheriges Traktandum"
+
+msgid "Next agenda item"
+msgstr "Nächstes Traktandum"
 
 msgid "Memorial (PDF)"
 msgstr "Memorial (PDF)"
